--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ a {text-decoration: none;}
 .header-v2 .itemcol { width: auto; } 
 .header-v2 { padding: 20px 0; } 
 .row-1 .group-2 .item { display: inline-block; width: 209px; text-align: left; } 
-.row-1 .group-2 { display: block; text-align: center; } 
+.row-1 .group-2 { display: block; text-align: center;width: 320px; margin: auto; } 
 .row-1 .group-2 .btc, 
 .row-1 .group-2 .item-80, 
 .row-1 .group-2 .item-58 { margin: 0 0 35px; } 
@@ -193,7 +193,7 @@ a {text-decoration: none;}
 .row-1 { overflow: hidden; }
 .row-1 .bg-0 { display: block !important;right: -70px; top: -80px; z-index: 1; }
 .row-1 .group-1 { padding: 80px 20px;background-image: url(images/bg-320.png); background-size: 320px; } 
-.row-1 .group-2 { padding: 0 40px 0 40px;width: 320px; margin: auto; } 
+.row-1 .group-2 { padding: 0 40px 0 40px;width: 320px; } 
 .row-1 .group-2 .item { width: 236px; }
 .row-1 .group-2 .item-80 { margin-left: 0; margin-right: 0; } 
 .row-1 .group-2 .item-2321 { margin-left: 0; } 
